--- a/_posts/2022-03-28-update.markdown
+++ b/_posts/2022-03-28-update.markdown
@@ -11,7 +11,7 @@ tags: [github pages, jekyll]
 
 今まではHTMLを手打ちしていましたが、jekyllっていうやつを使ってみました。これを使うと、ブログ記事みたいなのが量産できるっぽいです。
 
-[・Markdownで執筆できるブログをJekyll + Github Pagesで公開する]
+[・Markdownで執筆できるブログをJekyll + Github Pagesで公開する](https://tech.fusic.co.jp/posts/jekyll-githubpages/)
 
 これとかを参考にしました。
 
@@ -19,4 +19,3 @@ tags: [github pages, jekyll]
 
 前のデータもおいおい移行しようと思います。
 
-[・Markdownで執筆できるブログをJekyll + Github Pagesで公開する]:https://tech.fusic.co.jp/posts/jekyll-githubpages/
