--- a/_posts/2022-03-09-game1.markdown
+++ b/_posts/2022-03-09-game1.markdown
@@ -9,9 +9,9 @@ tags: [game, unity]
 
 矢印キーを使ってボールを操作するゲームです。
 
-[・ここをクリックして始める](/game1/index.html)
+- [ここをクリックして始める](/game1/index.html)
 
-[・1週間でちゃんと完成する「初めてのゲームづくり」でオススメの進め方（無料のUnity活用編）](https://note.com/unityjapan/n/n157e58f5167a)
+- [1週間でちゃんと完成する「初めてのゲームづくり」でオススメの進め方（無料のUnity活用編）](https://note.com/unityjapan/n/n157e58f5167a)
 
 このサイトを参考にしました。
 
