マークダウンの修正

--- a/_posts/2022-03-09-game1.markdown
+++ b/_posts/2022-03-09-game1.markdown
@@ -5,6 +5,8 @@ date: 2022-03-09
 last_modified_at: 2022-03-30
 categories: [game]
 tags: [game, unity]
+image: ""
+description: ""
 ---
 
 矢印キーを使ってボールを操作するゲームです。
