Co-authored-by: neko-san <ne53@users.noreply.github.com>

--- a/_posts/2020-08-09-1minute.markdown
+++ b/_posts/2020-08-09-1minute.markdown
@@ -6,6 +6,7 @@ last_modified_at: 2023-01-25
 categories: [works]
 tags: [mad]
 image: "/works/sm37323527.jpg"
+thumb: "/thumbs/sm37323527.png"
 description: ""
 ---
 
