--- a/_posts/2021-07-17-sfsrg.markdown
+++ b/_posts/2021-07-17-sfsrg.markdown
@@ -6,6 +6,7 @@ last_modified_at: 2023-01-25
 categories: [works]
 tags: [mad]
 image: "/works/sm39040925.jpg"
+thumb: "/thumbs/sm39040925.png"
 description: ""
 ---
 
