--- a/_posts/2021-11-01-baqeela.markdown
+++ b/_posts/2021-11-01-baqeela.markdown
@@ -6,6 +6,7 @@ last_modified_at: 2023-01-25
 categories: [works]
 tags: [mad]
 image: "/works/sm39563350.jpg"
+thumb: "/thumbs/sm39563350.png"
 description: ""
 ---
 
