--- a/_posts/2022-01-09-gabmed.markdown
+++ b/_posts/2022-01-09-gabmed.markdown
@@ -6,6 +6,7 @@ last_modified_at: 2023-01-25
 categories: [works]
 tags: [mad]
 image: "/works/gabmedsamune.png"
+thumb: "/thumbs/gabmedsamune.png"
 description: ""
 ---
 
