--- a/_posts/2022-04-02-mashup.markdown
+++ b/_posts/2022-04-02-mashup.markdown
@@ -6,6 +6,7 @@ last_modified_at: 2023-01-25
 categories: [works]
 tags: [music]
 image: "/works/mashupeye.jpg"
+thumb: "/thumbs/mashupeye.png"
 description: ""
 ---
 
