--- a/_posts/2023-01-27-moshrace.markdown
+++ b/_posts/2023-01-27-moshrace.markdown
@@ -6,6 +6,7 @@ last_modified_at: 2023-01-27
 categories: [works]
 tags: [mad]
 image: "/works/moshrace.png"
+thumb: "/thumbs/moshrace.png"
 description: ""
 ---
 
