画像の追加

--- a/_posts/2022-01-09-gabmed.markdown
+++ b/_posts/2022-01-09-gabmed.markdown
@@ -12,4 +12,6 @@ description: ""
 
 <script type="application/javascript" src="https://embed.nicovideo.jp/watch/sm39877085/script?w=640&h=360"></script><noscript><a href="https://www.nicovideo.jp/watch/sm39877085">【合作】ガヴめっど【音MAD】</a></noscript>
 
+![Alt text](/works/gabmedsamune.png)
+
 主催,サムネイル,ロゴ,映像まとめ,1-チルミルチルノ
