--- a/_posts/2023-01-27-moshrace.markdown
+++ b/_posts/2023-01-27-moshrace.markdown
@@ -6,13 +6,15 @@ last_modified_at: 2023-01-27
 categories: [works]
 tags: [mad]
 image: "/works/moshrace.png"
-thumb: "/thumbs/moshrace.png"
+thumb: "/thumbs/moshrace.gif"
 description: ""
 ---
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/_ZJ8MrEXIio" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 イントロ、サビパートの映像編集
+
+制作期間:2022/12~2023/1/25
 
 <video controls width="100%" autoplay loop muted="true" src="/works/moshrace.mp4" type="video/mp4" >
  Sorry, your browser doesn't support embedded videos.
