--- a/_posts/2021-11-01-baqeela.markdown
+++ b/_posts/2021-11-01-baqeela.markdown
@@ -13,3 +13,5 @@ description: ""
 <script type="application/javascript" src="https://embed.nicovideo.jp/watch/sm39563350/script?w=640&h=360"></script><noscript><a href="https://www.nicovideo.jp/watch/sm39563350">とりっくおあとりーとーっ！！！</a></noscript>
 
 一部台詞合わせ
+
+<blockquote class="twitter-tweet"><p lang="ja" dir="ltr">例のバキーラの続きあった <a href="https://t.co/Axq1TietK5">pic.twitter.com/Axq1TietK5</a></p>&mdash; せはた (@SehataKuro) <a href="https://twitter.com/SehataKuro/status/1569636115044499456?ref_src=twsrc%5Etfw">September 13, 2022</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
