--- a/_posts/2022-04-03-mashup.markdown
+++ b/_posts/2022-04-03-mashup.markdown
@@ -3,7 +3,7 @@ layout: post
 title:  "【MASHUP】メルティダンス【メルティランドナイトメア × YONA YONA DANCE】"
 date: 2022-04-03
 last_modified_at: 2023-01-25
-categories: [works]
+categories: [music]
 tags: [music]
 image: "/works/mashupyona.jpg"
 thumb: "/thumbs/mashupyona.png"
