--- a/_posts/2022-05-05-okaeri.markdown
+++ b/_posts/2022-05-05-okaeri.markdown
@@ -3,7 +3,7 @@ layout: post
 title:  "おかえり"
 date: 2022-05-05
 last_modified_at: 2023-01-25
-categories: [works]
+categories: [music]
 tags: [music]
 image: "/works/okaeri.jpg"
 thumb: "/thumbs/okaeri.png"
