--- a/_posts/2022-01-09-gabmed.markdown
+++ b/_posts/2022-01-09-gabmed.markdown
@@ -3,7 +3,7 @@ layout: post
 title:  "【合作】ガヴめっど【音MAD】"
 date: 2022-01-09
 last_modified_at: 2023-01-25
-categories: [works]
+categories: [personal-works]
 tags: [mad]
 image: "/works/gabmedsamune.png"
 thumb: "/thumbs/gabmedsamune.png"
