--- a/_posts/2023-01-29-hanjou.markdown
+++ b/_posts/2023-01-29-hanjou.markdown
@@ -3,7 +3,7 @@ layout: post
 title:  "【悲報】はんじょう、何者かに勝手に合作にされてしまう……【2023/01/29】"
 date: 2023-01-29
 last_modified_at: 2023-09-07
-categories: [works]
+categories: [personal-works]
 tags: [mad]
 image: ""
 thumb: "/thumbs/hanjou1.png"
